# TicTacToe

./: CMakeLists.txt  TicTacToe.cpp  TicTacToe.h  main.cpp
include/: gameboard.h  gameengine.h  mainwindow.h  settings.h  settingsdialog.h
resources/: resources.qrs  styles.qss
src/: gameboard.cpp  gameengine.cpp  main.cpp  mainwindow.cpp  settings.cpp  settingsdialog.cpp
